<resources>
    <string name="app_name">Infinite Text Generator</string>
    <string name="input_contents">Enter text (recommended 30 characters or text)</string>
    <string name="input_count">Number of characters to be created (recommended below 10,000)</string>
    <string name="create">Create</string>
    <string name="copy">Copy</string>
    <string name="make_icon">Icon Creator</string>
    <string name="test_text">TestTextView</string>
    <string name="one_more_text">Please enter at least one text</string>
    <string name="finish_create">Creation completed</string>
    <string name="finish_copy">Copy finished</string>
    <string name="finish_delete_all">Complete deletion all log</string>
    <string name="count_time">times</string>
    <string name="finish_delete">Delete complete</string>
</resources>